--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     padding:0;
     margin:0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 16;
     color:black;
 
