--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     padding:0;
     margin:0;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 16;
     color:black;
 
