--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin:0;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 16;
-    color:black;
+    color:blue;
 
 }
 
