--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ body{
     margin:0;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 16;
-    color:red;
+    color:white;
 
 }
 
 .post-container{
-    background: rgba(153, 153, 153, 0.493);
+    background: rgba(39, 18, 18, 0.493);
   
     font-weight: 200;
     width:70%;
